Fixed: wflow-consoleweb - Fixed header label not aligned correctly in right-to-left.
git-svn-id: http://dev.joget.org/svn/jw-community/trunk@484 1bff935d-2fe2-40b7-b00f-c2aca69a7612

--- a/wflow-consoleweb/src/main/webapp/css/rtl.css
+++ b/wflow-consoleweb/src/main/webapp/css/rtl.css
@@ -8,6 +8,7 @@ body{
 }
 
 #header-label {
+    left: auto;
     right: 5px;
 }
 
